# ispc-rs

./: .gitignore  .travis.yml  Cargo.toml  LICENSE.md  README.md  aliases.js  build.rs  index.html  search-index.js  settings.html  source-files.js
.circleci/: config.yml  setup-dependencies.sh
.github/workflows/: main.yml
aligned_alloc/: all.html  fn.aligned_alloc.html  fn.aligned_free.html  index.html  sidebar-items.js
bindgen/: all.html  constant.LATEST_STABLE_RUST.html  enum.EnumVariation.html  enum.RustTarget.html  fn.builder.html  fn.clang_version.html  index.html  macro.extra_assert!.html  macro.extra_assert.html  macro.extra_assert_eq!.html  macro.extra_assert_eq.html  sidebar-items.js  static.RUST_TARGET_STRINGS.html  struct.Bindings.html  struct.Builder.html  struct.ClangVersion.html  struct.CodegenConfig.html
bindgen/callbacks/: enum.EnumVariantCustomBehavior.html  (+6 more)
cexpr/: all.html  enum.Error.html  fn.assert_full_parse.html  index.html  macro.comp!.html  macro.comp.html  macro.full!.html  macro.full.html  sidebar-items.js
clang_sys/: all.html  constant.CXAvailability_Available.html  constant.CXAvailability_Deprecated.html  constant.CXAvailability_NotAccessible.html  constant.CXAvailability_NotAvailable.html  constant.CXCallingConv_AAPCS.html  constant.CXCallingConv_AAPCS_VFP.html  constant.CXCallingConv_C.html  constant.CXCallingConv_Default.html  constant.CXCallingConv_IntelOclBicc.html  constant.CXCallingConv_Invalid.html  constant.CXCallingConv_PreserveAll.html  constant.CXCallingConv_PreserveMost.html  constant.CXCallingConv_Swift.html  constant.CXCallingConv_Unexposed.html  constant.CXCallingConv_Win64.html  constant.CXCallingConv_X86FastCall.html  constant.CXCallingConv_X86Pascal.html  constant.CXCallingConv_X86RegCall.html  constant.CXCallingConv_X86StdCall.html  constant.CXCallingConv_X86ThisCall.html  constant.CXCallingConv_X86VectorCall.html  constant.CXCallingConv_X86_64SysV.html  constant.CXCallingConv_X86_64Win64.html  constant.CXChildVisit_Break.html  constant.CXChildVisit_Continue.html  constant.CXChildVisit_Recurse.html  constant.CXCodeComplete_IncludeBriefComments.html  constant.CXCodeComplete_IncludeCodePatterns.html  constant.CXCodeComplete_IncludeCompletionsWithFixIts.html  constant.CXCodeComplete_IncludeMacros.html  constant.CXCodeComplete_SkipPreamble.html  constant.CXCommentInlineCommandRenderKind_Bold.html  constant.CXCommentInlineCommandRenderKind_Emphasized.html  constant.CXCommentInlineCommandRenderKind_Monospaced.html  constant.CXCommentInlineCommandRenderKind_Normal.html  constant.CXCommentParamPassDirection_In.html  constant.CXCommentParamPassDirection_InOut.html  constant.CXCommentParamPassDirection_Out.html  constant.CXComment_BlockCommand.html  (+1116 more)
compile/: Cargo.toml
compile/src/: lib.rs  opt.rs
env_logger/: struct.Builder.html  struct.Env.html  struct.Logger.html
examples/ddvol/: Cargo.toml  README.md  build.rs
examples/ddvol/scenes/: black_body_radiation.json  cool_warm_extended.json  csafe.json  linear_green.json  magnetic-reconnection.json  matplotlib_plasma.json  tacc-turbulence.json
examples/ddvol/src/: camera.ih  camera.ispc  camera.rs  ddvol.ispc  fb.ih  fb.ispc  fb.rs  main.rs  raw.rs  scene.rs  tfn.ih  tfn.ispc  tfn.rs  types.ih  vec3.rs  vec3f.ih  vec3i.ih  vol.ih  vol.ispc  vol.rs
examples/rt/: Cargo.toml  README  README.md  build.rs
examples/rt/scenes/: r_spheres.json  sphere_on_plane.json
examples/rt/src/: camera.rs  geom.ih  geom.ispc  geom.rs  lib.rs  lights.ih  lights.ispc  lights.rs  main.rs  material.ih  material.ispc  material.rs  mc.ih  mc.ispc  plane.rs  rt.ispc  scene.rs  sphere.rs  vec3f.ih  vec3f.rs
examples/simple/: Cargo.toml  build.rs
examples/simple/src/: main.rs  simple.ispc
gcc/: all.html  index.html  sidebar-items.js  struct.Build.html  struct.Error.html  struct.Tool.html
glob/: fn.glob.html  fn.glob_with.html  index.html  struct.GlobError.html  struct.MatchOptions.html  struct.Paths.html  struct.Pattern.html  struct.PatternError.html  type.GlobResult.html
ispc/: all.html  fn.compile_library.html  fn.print_instrumenting_summary.html  fn.set_instrument.html  fn.set_task_system.html  index.html  macro.ispc_module.html  sidebar-items.js  struct.Config.html  struct.PackagedModule.html
ispc_compile/: all.html  fn.compile_library.html  index.html  sidebar-items.js  struct.Config.html
ispc_rt/: all.html  fn.print_instrumenting_summary.html  fn.set_instrument.html  fn.set_task_system.html  index.html  macro.ispc_module!.html  macro.ispc_module.html  sidebar-items.js  struct.PackagedModule.html
libloading/: all.html  index.html  struct.Library.html  struct.Symbol.html  type.Result.html
nom/: all.html  enum.CompareResult.html  enum.Endianness.html  enum.Err.html  enum.ErrorKind.html  enum.Needed.html  fn.add_error_pattern.html  fn.alpha.html  fn.alpha0.html  fn.alpha1.html  fn.alphanumeric.html  fn.alphanumeric0.html  fn.alphanumeric1.html  fn.anychar.html  fn.be_f32.html  fn.be_f64.html  fn.be_i128.html  fn.be_i16.html  fn.be_i24.html  fn.be_i32.html  fn.be_i64.html  fn.be_i8.html  fn.be_u128.html  fn.be_u16.html  fn.be_u24.html  fn.be_u32.html  fn.be_u64.html  fn.be_u8.html  fn.begin.html  fn.code_from_offset.html  fn.compare_error_paths.html  fn.crlf.html  fn.digit.html  fn.digit0.html  fn.digit1.html  fn.double.html  fn.double_s.html  fn.eol.html  fn.error_to_list.html  fn.error_to_u32.html  (+206 more)
peeking_take_while/: all.html  index.html  sidebar-items.js  struct.PeekingTakeWhile.html  trait.PeekableExt.html
proc_macro2/: struct.Span.html  struct.TokenStream.html
runtime/: Cargo.toml
runtime/src/: exec.rs  instrument.rs  lib.rs  task.rs
rustc_hash/: all.html  index.html  struct.FxHasher.html  type.FxHashMap.html  type.FxHashSet.html
scripts/: build-examples-linux.sh  build-test-windows.ps1  check-examples-formatting.sh
src/: exec.rs  instrument.rs  lib.rs  main.rs  opt.rs  say_hello.ispc  task.rs
which/: all.html  enum.ErrorKind.html  fn.which.html  fn.which_in.html  index.html  struct.CanonicalPath.html  struct.Error.html  struct.Path.html  type.Result.html
(+1357 files in other folders)
