[package]
name = "ispc"
version = "0.3.5"
authors = ["Will Usher <willusher.life@gmail.com>"]
homepage = "https://github.com/Twinklebear/ispc-rs"
documentation = "http://www.willusher.io/ispc-rs/ispc/"
repository = "https://github.com/Twinklebear/ispc-rs"
readme = "README.md"
license = "MIT"
description = """
A build-time dependency for Cargo build scripts to help with compiling
and linking to ISPC code and generating Rust bindings for the resulting library
"""
keywords = ["build-dependencies"]

exclude = [
	".travis.yml",
	"*.png",
	".gitignore",
	"examples/"
]

[dependencies]
bindgen = "0.37.0"
gcc = "0.3.54"
libc = "0.2.42"
aligned_alloc = "0.1.3"
num_cpus = "1.8.0"
regex = "1.0.0"
semver = "0.9.0"
clippy = { version = "0.0.206", optional = true }

[features]
unstable = ["clippy"]

