[package]
name = "ispc_compile"
version = "0.3.8"
authors = ["Will Usher <willusher.life@gmail.com>"]
homepage = "https://github.com/Twinklebear/ispc-rs"
documentation = "http://www.willusher.io/ispc-rs/ispc/"
repository = "https://github.com/Twinklebear/ispc-rs"
readme = "README.md"
license = "MIT"
description = """
A build-time dependency for Cargo build scripts to help with compiling
and linking to ISPC code and generating Rust bindings for the resulting library.
"""
keywords = ["build-dependencies", "ispc", "simd"]

exclude = [
	".travis.yml",
	"*.png",
	".gitignore",
	"examples/*"
]

[dependencies]
bindgen = "0.43"
gcc = "0.3.55"
libc = "0.2.43"
regex = "1.0.6"
semver = "0.9.0"

