[package]
name = "ispc_compile"
version = "1.0.6"
authors = ["Will Usher <will@willusher.io>"]
homepage = "https://github.com/Twinklebear/ispc-rs"
documentation = "http://www.willusher.io/ispc-rs/ispc/"
repository = "https://github.com/Twinklebear/ispc-rs"
readme = "../README.md"
license = "MIT"
description = """
A build-time dependency for Cargo build scripts to help with compiling
and linking to ISPC code, and generating Rust bindings to the resulting library.
The generated bindings can be imported by using ispc_rt, which will also
support linking to pre-built ISPC code. Using pre-built binaries is useful
for distributing a library or tool using ISPC, while not requiring end users
to have the ISPC compiler.
"""
keywords = ["build-dependencies", "ispc", "simd"]

exclude = [
	".travis.yml",
	"*.png",
	".gitignore",
	"examples/*"
]

[dependencies]
bindgen = "0.46.0"
gcc = "0.3.55"
libc = "0.2.47"
regex = "1.1.0"
semver = "0.9.0"

