[package]
name = "ispc_compile"
version = "2.0.1"
edition = "2021"
authors = ["Will Usher <will@willusher.io>"]
homepage = "https://github.com/Twinklebear/ispc-rs"
documentation = "https://docs.rs/ispc_compile/"
repository = "https://github.com/Twinklebear/ispc-rs"
readme = "../README.md"
license = "MIT"
description = """
A build-time dependency for Cargo build scripts to help with compiling
and linking to ISPC code, and generating Rust bindings to the resulting library.
The generated bindings can be imported by using ispc_rt, which will also
support linking to pre-built ISPC code. Using pre-built binaries is useful
for distributing a library or tool using ISPC, while not requiring end users
to have the ISPC compiler.
"""
keywords = ["build-dependencies", "ispc", "simd"]

exclude = [
	".travis.yml",
	"*.png",
	".gitignore",
	".github",
	"scripts/*",
	"examples/*"
]

[dependencies]
bindgen = "0.69.1"
cc = "1"
libc = "0.2.137"
regex = "1.7.0"
semver = "1.0.14"
