[package]
name = "ispc_rt"
version = "1.0.0"
authors = ["Will Usher <willusher.life@gmail.com>"]
homepage = "https://github.com/Twinklebear/ispc-rs"
documentation = "http://www.willusher.io/ispc-rs/ispc/"
repository = "https://github.com/Twinklebear/ispc-rs"
readme = "README.md"
license = "MIT"
description = """
A runtime dependency for linking Rust code with pre-built ISPC binaries
and Rust bindings. These modules and bindings should be built with
ispc_compile.
"""
keywords = ["build-dependencies", "ispc", "simd"]

exclude = [
	".travis.yml",
	"*.png",
	".gitignore",
	"examples/*"
]

[dependencies]
libc = "0.2.47"
aligned_alloc = "0.1.3"
num_cpus = "1.9.0"

