[package]
name = "ispc_rt"
version = "1.0.7"
authors = ["Will Usher <will@willusher.io>"]
homepage = "https://github.com/Twinklebear/ispc-rs"
documentation = "https://docs.rs/ispc_rt/"
repository = "https://github.com/Twinklebear/ispc-rs"
readme = "../README.md"
license = "MIT"
description = """
A runtime dependency for linking Rust code with pre-built ISPC binaries
and Rust bindings. These modules and bindings should be built with
ispc_compile.
"""
keywords = ["build-dependencies", "ispc", "simd"]

exclude = [
	".travis.yml",
	"*.png",
	".gitignore",
    ".github",
    "scripts/*",
	"examples/*"
]

[dependencies]
libc = "0.2.117"
num_cpus = "1.13.1"

