[package]
name = "ddvol"
version = "0.1.0"
authors = ["Will Usher <willusher.life@gmail.com>"]
build = "build.rs"

[dependencies]
image = "0.13.0"
rand = "0.3.15"
num = "0.1.37"
serde_json = "1.0.2"
docopt = "0.7.0"
rustc-serialize = "0.3.19"
ispc = { path = "../../" }

[build-dependencies]
ispc = { path = "../../" }

