[package]
name = "ddvol"
version = "0.1.0"
authors = ["Will Usher <willusher.life@gmail.com>"]
build = "build.rs"

[dependencies]
image = "0.17.0"
rand = "0.3.18"
num = "0.1.40"
serde_json = "1.0.6"
serde_derive = "1.0.20"
serde = "1.0.20"
docopt = "0.8.1"
ispc = { path = "../../" }

[build-dependencies]
ispc = { path = "../../" }

