[package]
name = "ddvol"
version = "0.1.0"
edition = "2021"
authors = ["Will Usher <willusher.life@gmail.com>"]
build = "build.rs"

[dependencies]
image = "0.24"
rand = "0.8"
num = "0.4"
serde_json = "1.0.41"
serde_derive = "1.0.102"
serde = "1.0.102"
docopt = "1.1.0"
ispc = { path = "../../" }

[build-dependencies]
ispc = { path = "../../" }

