[package]
name = "rt"
version = "0.1.0"
authors = ["Will Usher <willusher.life@gmail.com>"]
build = "build.rs"

[dependencies]
image = "0.20.1"
rand = "0.5"
num = "0.2"
serde_json = "1.0.33"
serde_derive = "1.0.80"
serde = "1.0.80"
docopt = "1.0.2"
ispc = { path = "../../" }

[build-dependencies]
ispc = { path = "../../" }

