[package]
name = "simple"
version = "0.1.0"
authors = ["Will Usher <willusher.life@gmail.com>"]
build = "build.rs"

[dependencies]
ispc_rt = { path = "../../runtime" }

[build-dependencies]
ispc_compile = { path = "../../compile", optional = true }
ispc_rt = { path = "../../runtime" }

[features]
ispc = ["ispc_compile"]

